--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
 
 <body>
     <div>
-        <label for="gravity">Gravity</label>
+        <label for="gravity">Gravity : </label>
         <input type="range" name="gravity" id="gravity" min="0" max="0.1" step="0.001">
     </div>
     <div>
-        <label for="airDrag">Air Drag</label>
+        <label for="airDrag">Air Drag : </label>
         <input type="range" name="airDrag" id="airDrag" min="0" max="0.001" step="0.0001">
     </div>
     <div>
-        <label for="elasticity">Elasticity of Walls</label>
+        <label for="elasticity">Elasticity of Walls : </label>
         <input type="range" name="elasticity" id="elasticity" min="0" max="1" step="0.01">
     </div>
     <canvas></canvas>
