--- a/index.html
+++ b/index.html
@@ -10,6 +10,18 @@
 
 <body>
     <div>
+        <h3>
+            Number of Clicks :
+        </h3>
+        <h3 id="clicks" class="scores">0</h3>
+    </div>
+    <div>
+        <h3>
+            Number of Circles Left :
+        </h3>
+        <h3 id="numberOfCircles" class="scores">0</h3>
+    </div>
+    <div>
         <label for="gravity">Gravity : </label>
         <input type="range" name="gravity" id="gravity" min="0" max="0.1" step="0.001">
     </div>
@@ -21,6 +33,7 @@
         <label for="elasticity">Elasticity of Walls : </label>
         <input type="range" name="elasticity" id="elasticity" min="0" max="1" step="0.01">
     </div>
+    <button id="reset">RESET</button>
     <canvas></canvas>
     <script src="app.js"></script>
 </body>
